Bugfix/subscribe to position data by default (#65)
* Fix format.

* Subscribe to position data by default.

* Fix comment section.